--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@puchunjie/doc-tools-mcp",
-  "version": "1.0.3",
+  "version": "1.0.11",
   "description": "Word 文档处理 MCP 服务器 - 基于 TypeScript 的文档处理工具",
-  "type": "module",
   "main": "dist/mcp-server.js",
   "types": "dist/mcp-server.d.ts",
   "bin": {
-    "doc-tools-mcp": "./dist/mcp-server.js"
+    "doc-tools-mcp": "dist/mcp-server.js"
   },
   "files": [
     "dist",
@@ -14,7 +13,7 @@
     "README_zh.md"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && chmod +x dist/mcp-server.js",
     "start": "node dist/mcp-server.js",
     "dev": "ts-node --esm src/mcp-server.ts",
     "prepublishOnly": "npm run build",
@@ -40,6 +39,7 @@
   "homepage": "https://github.com/puchunjie/doc-tools-mcp#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@puchunjie/doc-tools-mcp": "^1.0.10",
     "docx": "^8.5.0",
     "express": "^4.18.2",
     "mammoth": "^1.6.0"
