chore: add MIT license and update package.json license field

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "word-processing"
   ],
   "author": "puchunjie",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/puchunjie/doc-tools-mcp.git"
